--- a/nextjs/topics-as-navigation/styles/Topic.module.css
+++ b/nextjs/topics-as-navigation/styles/Topic.module.css
@@ -75,9 +75,14 @@
   padding: 5px 0;
 }
 
-.items figure {
+.itemImageWrap {
   flex: 1 1 auto;
+  position: relative;
+  display: flex;
   border: 1px solid rgb(223, 223, 223);
+}
+
+.items figure {
   display: flex;
 }
 
@@ -90,4 +95,29 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.itemTopics {
+  position: absolute;
+  left: 0;
+  bottom: 15px;
+  padding: 5px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: wrap-reverse;
+  gap: 5px;
+}
+
+.itemTopics a {
+  display: inline-block;
+  padding: 6px 8px;
+  border-radius: 2px;
+  background: rgb(255, 255, 255);
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.itemTopics a:hover {
+  background: rgb(220, 220, 220);
 }
