--- a/nextjs/topics-as-navigation/styles/Topic.module.css
+++ b/nextjs/topics-as-navigation/styles/Topic.module.css
@@ -114,6 +114,7 @@
   padding: 6px 8px;
   border-radius: 2px;
   background: rgb(255, 255, 255);
+  border: 1px solid rgb(223, 223, 223);
   font-weight: 500;
   text-decoration: none;
 }
